--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,8 +7,10 @@
     "com.unity.2d.spriteshape": "12.0.1",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.2d.tilemap.extras": "5.0.1",
+    "com.unity.ide.visualstudio": "2.0.25",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.render-pipelines.universal": "17.2.0",
+    "com.unity.toolchain.linux-x86_64": "2.0.11",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
